added current data

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+  <div id="today">
+    <div id="location"></div>
+    <div id="temp"></div>
+    <div id="weather-icon"></div>
+  </div>
   <script src="js/index.js"></script>
 </body>
 </html>
