--- a/index.html
+++ b/index.html
@@ -20,21 +20,37 @@
     </div>
 
     <div class="current">
-      <div id="date"></div>
+      <div class="current-time" id="date"></div>
+      <div class="current-time" id="time"></div>
       <div class="weather">
         <div id="temp"></div>
         <div id="weather-icon"></div>
+      </div>
+      <div class="min-max">
+        <div id="temp-range"></div>
       </div>
     </div>
 
     <div id="future">
       <div class="row">
-        <div class="next-day" id="day-2"></div>
-        <div class="next-day" id="day-3"></div>
+        <div class="next-day" id="day-2">
+          <div class="future-date" id="date-2"></div>
+          <div class="future-temp" id="temp-2"></div>
+        </div>
+        <div class="next-day" id="day-3">
+          <div class="future-date" id="date-3"></div>
+          <div class="future-temp" id="temp-3"></div>
+        </div>
       </div>
       <div class="row">
-        <div class="next-day" id="day-4"></div>
-        <div class="next-day" id="day-5"></div>
+        <div class="next-day" id="day-4">
+          <div class="future-date" id="date-4"></div>
+          <div class="future-temp" id="temp-4"></div>
+        </div>
+        <div class="next-day" id="day-5">
+          <div class="future-date" id="date-5"></div>
+          <div class="future-temp" id="temp-5"></div>
+        </div>
       </div>
   
     </div>
